# Loan_prediction_package

./: LICENSE  README.md  TUTORIAL.ipynb  pyproject.toml
loan_prediction/: __init__.py  data_loader.py  data_preprocessing.py  model.py  visualization.py
